--- a/index.html
+++ b/index.html
@@ -1,104 +1,70 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Madrasa Hifz Progress — Gadwal</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  body { font-family: 'Poppins', system-ui, Arial; background:#f5f7fb; color:#0f1724; padding:28px;}
-  h1 { color:#0b6b3a; font-weight:700; }
-  .topbar { padding:18px; border-radius:12px; margin-bottom:20px; background: #fff; box-shadow:0 6px 18px rgba(15,23,36,0.04); }
-  .search-input { border-radius:999px; padding:10px 16px; border:1px solid #e6eef0; width:100%; }
-  .pbar { height:14px; background:#e9f7ee; border-radius:8px; overflow:hidden; }
-  .pbar .fill { height:100%; background:linear-gradient(90deg,#198754,#2fa66a); width:0%; transition: width 600ms ease; }
-  table tbody tr td { vertical-align: middle; }
-  .small-muted { color:#6b7280; font-size:13px; }
-</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Madrasa — Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-  <div class="topbar d-flex justify-content-between align-items-center">
-    <div>
-      <h1>Students</h1>
-      <div class="small-muted">Track Hifz progress — updated from spreadsheet</div>
+  <nav class="topnav">
+    <div class="container d-flex align-items-center justify-content-between">
+      <a class="brand" href="index.html">Madrasa — Hifz Progress</a>
+      <div class="nav-links">
+        <a href="students.html">Students</a>
+        <a href="sponsors.html">Sponsors</a>
+        <a href="payments.html">Payments</a>
+      </div>
     </div>
-    <div class="text-end small-muted">
-      <div id="statsTotal">Total: —</div>
-      <div id="lastUpdated"></div>
+  </nav>
+
+  <main class="container mt-4">
+    <div class="row g-3">
+      <div class="col-md-8">
+        <div class="card p-3">
+          <h2>Welcome</h2>
+          <p class="muted">This dashboard shows student Hifz progress and sponsor (kifālat) details. Update <code>students.json</code> to change data.</p>
+          <div id="recent-updates" class="mt-3"></div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card p-3 mb-3">
+          <div class="muted">Total Students</div>
+          <div id="stat-total" class="stat-big">—</div>
+        </div>
+        <div class="card p-3">
+          <div class="muted">Average Progress</div>
+          <div id="stat-avg" class="stat-big">—</div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="row align-items-center mb-3">
-    <div class="col-md-6 mb-2"><input id="q" class="search-input" placeholder="Search name/place/father..." /></div>
-    <div class="col-md-3 mb-2"><select id="filterSponsor" class="form-select"><option value="">All Sponsors</option></select></div>
-    <div class="col-md-3 text-end mb-2"><select id="filterGender" class="form-select"><option value="">All Gender</option><option value="M">Male</option><option value="F">Female</option></select></div>
-  </div>
-
-  <div class="card p-3">
-    <div class="table-responsive">
-      <table class="table table-hover align-middle" id="studentsTable">
-        <thead class="table-light"><tr><th>Name</th><th>Father</th><th>Place</th><th>Para</th><th>Progress</th><th>Sponsor</th></tr></thead>
-        <tbody></tbody>
-      </table>
+    <div class="mt-4">
+      <a class="btn btn-outline-primary" href="students.html">View Students</a>
+      <a class="btn btn-outline-secondary" href="sponsors.html">View Sponsors</a>
     </div>
-  </div>
+  </main>
 
-</div>
-
-<script>
-function esc(s){ return String(s||'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
-
-async function load(){
-  const res = await fetch('students.json');
-  const data = await res.json();
-  window._students = data;
-  document.getElementById('statsTotal').textContent = 'Total: ' + data.length;
-  document.getElementById('lastUpdated').textContent = new Date().toLocaleString();
-  const sponsors = [...new Set(data.map(s=>s.sponsor).filter(Boolean))].sort();
-  const sel = document.getElementById('filterSponsor');
-  sponsors.forEach(sp=>{ const o=document.createElement('option'); o.value=sp; o.textContent=sp; sel.appendChild(o); });
-  render();
-  animateBars();
-  attachHandlers();
-}
-
-function render(){
-  const q = document.getElementById('q').value.trim().toLowerCase();
-  const sponsorFilter = document.getElementById('filterSponsor').value;
-  const genderFilter = document.getElementById('filterGender').value;
-  let list = window._students.slice();
-  if(sponsorFilter) list = list.filter(x=>x.sponsor===sponsorFilter);
-  if(genderFilter) list = list.filter(x=>x.gender===genderFilter);
-  if(q) list = list.filter(s=> (s.name+' '+s.father+' '+s.place+' '+s.sponsor).toLowerCase().includes(q) );
-  const tbody = document.querySelector('#studentsTable tbody');
-  tbody.innerHTML = list.map(s=>`
-    <tr>
-      <td><strong>${esc(s.name)}</strong></td>
-      <td>${esc(s.father)}</td>
-      <td>${esc(s.place)}</td>
-      <td>${esc(s.para||0)}</td>
-      <td style="width:260px">
-        <div class="pbar"><div class="fill" style="width:${esc(s.progress_pct||0)}%"></div></div>
-        <div class="small-muted mt-1">${esc(s.progress_pct||0)}% complete</div>
-      </td>
-      <td>${esc(s.sponsor)}</td>
-    </tr>
-  `).join('');
-}
-
-function animateBars(){
-  setTimeout(()=>{ document.querySelectorAll('.pbar .fill').forEach((f,idx)=>{ const w=f.style.width; f.style.width='0%'; setTimeout(()=>f.style.width=w, 100+idx*20); }); },200);
-}
-
-function attachHandlers(){
-  document.getElementById('q').addEventListener('input', render);
-  document.getElementById('filterSponsor').addEventListener('change', render);
-  document.getElementById('filterGender').addEventListener('change', render);
-}
-
-window.addEventListener('DOMContentLoaded', load);
-</script>
+  <script src="assets/app.js"></script>
+  <script>
+    // simple page init: show top 5 updated students (by para desc)
+    (async function(){
+      const data = await window.loadData();
+      const recent = data.students.slice().sort((a,b)=> (b.para||0) - (a.para||0) ).slice(0,6);
+      const container = document.getElementById('recent-updates');
+      container.innerHTML = recent.map(s=>`
+        <div class="mini-row">
+          <div><strong>${escapeHTML(s.name)}</strong> — <span class="muted">${escapeHTML(s.sponsor)}</span></div>
+          <div class="muted">Para: ${s.para || 0} — ${s.progress_pct || 0}%</div>
+        </div>
+      `).join('');
+      document.getElementById('stat-total').textContent = data.students.length;
+      const avg = Math.round((data.students.reduce((sum,s)=>sum+(s.progress_pct||0),0) / Math.max(1,data.students.length)));
+      document.getElementById('stat-avg').textContent = avg + '%';
+    })();
+  </script>
 </body>
 </html>
