--- a/students.html
+++ b/students.html
@@ -1,7 +1,113 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><title>Students — Madrasa Hifz</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Cairo:wght@600;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="styles.css"></head><body>
-<nav class="nav"><div class="container nav-inner"><a class="brand" href="index.html">Madrasa Hifz</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="index.html#about">About</a></div></div></nav>
-<main class="container page"><div class="page-head"><h1>Students</h1><div class="controls"><input id="search" placeholder="Search name/place/father..." /><select id="filterSponsor"><option value="">All Sponsors</option></select><select id="filterGender"><option value="">All Gender</option><option value="M">Male</option><option value="F">Female</option></select></div></div>
-<div class="table-wrap"><table id="studentsTable"><thead><tr><th>Name</th><th>Father</th><th>Place</th><th>Para</th><th>Progress</th><th>Sponsor</th></tr></thead><tbody></tbody></table></div></main>
-<script src="scripts.js"></script></body></html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Students — Madrasa</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/style.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="topnav">
+    <div class="container d-flex align-items-center justify-content-between">
+      <a class="brand" href="index.html">Madrasa — Hifz Progress</a>
+      <div class="nav-links">
+        <a href="students.html" class="active">Students</a>
+        <a href="sponsors.html">Sponsors</a>
+        <a href="payments.html">Payments</a>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container mt-4">
+    <div class="d-flex gap-2 mb-3 align-items-center">
+      <input id="q" class="form-control" placeholder="Search name/place/father/sponsor...">
+      <select id="filterSponsor" class="form-select w-auto"><option value="">All Sponsors</option></select>
+      <select id="filterGender" class="form-select w-auto"><option value="">All Gender</option><option value="M">Male</option><option value="F">Female</option></select>
+    </div>
+
+    <div class="card p-0">
+      <div class="table-responsive">
+        <table class="table mb-0" id="tbl">
+          <thead class="table-light"><tr><th>Name</th><th>Father</th><th>Place</th><th>Sponsor</th><th>Para</th><th>Progress</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
+  </main>
+
+  <!-- student detail modal -->
+  <div class="modal fade" id="studentModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header"><h5 id="modalName"></h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
+        <div class="modal-body" id="modalBody"></div>
+        <div class="modal-footer"><button class="btn btn-secondary" data-bs-dismiss="modal">Close</button></div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/app.js"></script>
+  <script>
+    (async function(){
+      const data = await window.loadData();
+      window._students = data.students;
+      // populate sponsor filter
+      const sponsors = [...new Set(data.students.map(s=>s.sponsor).filter(Boolean))].sort();
+      const sel = document.getElementById('filterSponsor');
+      sponsors.forEach(sp=>{ const o=document.createElement('option'); o.value=sp; o.text=sp; sel.appendChild(o); });
+
+      function render(){
+        const q = document.getElementById('q').value.trim().toLowerCase();
+        const sponsor = document.getElementById('filterSponsor').value;
+        const gender = document.getElementById('filterGender').value;
+        let list = data.students.slice();
+        if(sponsor) list = list.filter(s=>s.sponsor===sponsor);
+        if(gender) list = list.filter(s=>s.gender===gender);
+        if(q) list = list.filter(s => (s.name+' '+s.father+' '+s.place+' '+s.sponsor).toLowerCase().includes(q));
+        const tbody = document.querySelector('#tbl tbody');
+        tbody.innerHTML = list.map(s=>`
+          <tr data-id="${s.id}">
+            <td><a href="#" class="open" data-id="${s.id}">${escapeHTML(s.name)}</a></td>
+            <td>${escapeHTML(s.father)}</td>
+            <td>${escapeHTML(s.place)}</td>
+            <td>${escapeHTML(s.sponsor)}</td>
+            <td>${s.para||0}</td>
+            <td style="width:300px">
+              <div class="pbar"><div class="fill" style="width:${s.progress_pct||0}%"></div></div>
+              <div class="muted small">${s.progress_pct||0}%</div>
+            </td>
+          </tr>`).join('');
+        // attach click handlers
+        document.querySelectorAll('#tbl a.open').forEach(a=>{
+          a.onclick = (e)=>{ e.preventDefault(); openModal(a.dataset.id); }
+        });
+      }
+
+      function openModal(id){
+        const s = data.students.find(x=> String(x.id)===String(id));
+        if(!s) return;
+        document.getElementById('modalName').textContent = s.name;
+        document.getElementById('modalBody').innerHTML = `
+          <p><strong>Father:</strong> ${escapeHTML(s.father)}</p>
+          <p><strong>Place:</strong> ${escapeHTML(s.place)}</p>
+          <p><strong>Sponsor:</strong> ${escapeHTML(s.sponsor)}</p>
+          <p><strong>Para:</strong> ${s.para||0}</p>
+          <p><strong>Progress:</strong> ${s.progress_pct||0}%</p>
+        `;
+        new bootstrap.Modal(document.getElementById('studentModal')).show();
+      }
+
+      // live UI bindings
+      document.getElementById('q').addEventListener('input', render);
+      document.getElementById('filterSponsor').addEventListener('change', render);
+      document.getElementById('filterGender').addEventListener('change', render);
+
+      render();
+      setTimeout(()=> document.querySelectorAll('.pbar .fill').forEach((f,i)=>{ const w=f.style.width; f.style.width='0%'; setTimeout(()=>f.style.width=w,120+i*20); }),200);
+    })();
+  </script>
+</body>
+</html>
