--- a/sponsors.html
+++ b/sponsors.html
@@ -1,6 +1,35 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><title>Sponsors — Madrasa Hifz</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Cairo:wght@600;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="styles.css"></head><body>
-<nav class="nav"><div class="container nav-inner"><a class="brand" href="index.html">Madrasa Hifz</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="index.html#about">About</a></div></div></nav>
-<main class="container page"><h1>Sponsors & Kifālat</h1><div id="sponsorsList">Loading...</div></main>
-<script src="scripts.js"></script></body></html>
+<html>
+<head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Sponsors — Madrasa</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/style.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa — Hifz Progress</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html" class="active">Sponsors</a><a href="payments.html">Payments</a></div></div></nav>
+
+  <main class="container mt-4">
+    <div class="card p-3">
+      <h3>Sponsors (Kifālat)</h3>
+      <div id="sponsorList" class="mt-3"></div>
+    </div>
+  </main>
+
+  <script src="assets/app.js"></script>
+  <script>
+    (async function(){
+      const data = await window.loadData();
+      const groups = data.students.reduce((acc,s)=>{ const k = s.sponsor||'Unassigned'; (acc[k]||(acc[k]=[])).push(s); return acc; }, {});
+      const wrap = document.getElementById('sponsorList');
+      const keys = Object.keys(groups).sort();
+      wrap.innerHTML = keys.map(k=>{
+        const arr = groups[k];
+        const avg = Math.round(arr.reduce((a,b)=>a+(b.progress_pct||0),0)/Math.max(1,arr.length));
+        return `<div class="sponsor-card"><div class="s-left"><strong>${escapeHTML(k)}</strong><div class="muted">${arr.length} student(s)</div></div><div class="s-right"><div class="muted">Avg progress</div><div class="stat-small">${avg}%</div></div></div>`;
+      }).join('');
+    })();
+  </script>
+</body>
+</html>
