--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Madrasa — Dashboard</title>
+  <title>Progress Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
   <nav class="topnav">
     <div class="container d-flex align-items-center justify-content-between">
-      <a class="brand" href="index.html">Madrasa — Hifz Progress</a>
+      <a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal : Hifz Progress</a>
       <div class="nav-links">
         <a href="students.html">Students</a>
         <a href="sponsors.html">Sponsors</a>
@@ -25,7 +25,7 @@
       <div class="col-md-8">
         <div class="card p-3">
           <h2>Welcome</h2>
-          <p class="muted">This dashboard shows student Hifz progress and sponsor (kifālat) details. Update <code>students.json</code> to change data.</p>
+          <p class="muted">This dashboard shows student Hifz progress and sponsor (kifālat) details.</p>
           <div id="recent-updates" class="mt-3"></div>
         </div>
       </div>
@@ -53,7 +53,7 @@
     // simple page init: show top 5 updated students (by para desc)
     (async function(){
       const data = await window.loadData();
-      const recent = data.students.slice().sort((a,b)=> (b.para||0) - (a.para||0) ).slice(0,6);
+      const recent = data.students.slice().sort((a,b)=> (b.para||0) - (a.para||0) ).slice(0,17);
       const container = document.getElementById('recent-updates');
       container.innerHTML = recent.map(s=>`
         <div class="mini-row">
