--- a/payments.html
+++ b/payments.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Payments — Madrasa</title>
+  <title>Payments</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa — Hifz Progress</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="payments.html" class="active">Payments</a></div></div></nav>
+  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal : Hifz Progress</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="payments.html" class="active">Payments</a></div></div></nav>
 
   <main class="container mt-4">
     <div class="card p-3">
