--- a/payments.html
+++ b/payments.html
@@ -25,8 +25,8 @@
 
     try {
       // Fetch your donations JSON (the new structure)
-      const r = await fetch('donations.json'); // make sure your JSON file is named donations.json
-      if(!r.ok) throw new Error('no donations.json');
+      const r = await fetch('payments.json'); // make sure your JSON file is named payments.json
+      if(!r.ok) throw new Error('no payments.json');
       const donations = await r.json();
 
       // Display Monthly Donations
@@ -56,7 +56,7 @@
       document.getElementById('paymentsArea').innerHTML = tbl;
 
     } catch(e){
-      document.getElementById('paymentsArea').innerHTML = '<div class="muted">No donation records found. Please add <code>donations.json</code> to the repo.</div>';
+      document.getElementById('paymentsArea').innerHTML = '<div class="muted">No donation records found. Please add <code>payments.json</code> to the repo.</div>';
     }
   })();
   </script>
