--- a/payments.html
+++ b/payments.html
@@ -1,64 +1,56 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Payments</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/style.css" rel="stylesheet">
-</head>
-<body>
-  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal : Hifz Progress</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="payments.html" class="active">Payments</a></div></div></nav>
-
-  <main class="container mt-4">
-    <div class="card p-3">
-      <h3>Payments / Updates</h3>
-      <div class="muted mb-2">This page shows monthly payments or updates (if available).</div>
-      <div id="paymentsArea"></div>
+<div id="paymentsArea" class="mt-3">
+  <!-- Monthly Donations -->
+  <div class="card mb-4 shadow-sm">
+    <div class="card-header bg-primary text-white">
+      <h5 class="mb-0">💰 Monthly Donations</h5>
     </div>
-  </main>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead class="table-light">
+            <tr>
+              <th>Sponsor</th>
+              <th>Amount (₹)</th>
+            </tr>
+          </thead>
+          <tbody>
+            ${donations.monthly_donations.map(d=>`
+            <tr>
+              <td>${d.sponsor}</td>
+              <td>${d.amount.toLocaleString()}</td>
+            </tr>`).join('')}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
-  <script src="assets/app.js"></script>
-  <script>
-  (async function(){
-    const data = await window.loadData(); // keep this if needed elsewhere
+  <!-- Bank Details -->
+  <div class="card mb-4 shadow-sm">
+    <div class="card-header bg-success text-white">
+      <h5 class="mb-0">🏦 Bank Details</h5>
+    </div>
+    <div class="card-body">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><strong>Bank:</strong> ${donations.bank_details.bank_name}</li>
+        <li class="list-group-item"><strong>Account No:</strong> ${donations.bank_details.account_no}</li>
+        <li class="list-group-item"><strong>IFSC:</strong> ${donations.bank_details.ifsc_code}</li>
+        <li class="list-group-item"><strong>UPI:</strong> ${donations.bank_details.upi_id}</li>
+        <li class="list-group-item"><strong>Account Holder:</strong> ${donations.bank_details.account_holder}</li>
+        <li class="list-group-item"><strong>Email:</strong> ${donations.bank_details.email}</li>
+      </ul>
+    </div>
+  </div>
 
-    try {
-      // Fetch your donations JSON (the new structure)
-      const r = await fetch('payments.json'); // make sure your JSON file is named payments.json
-      if(!r.ok) throw new Error('no payments.json');
-      const donations = await r.json();
-
-      // Display Monthly Donations
-      let tbl = `<h4>Monthly Donations</h4>
-                 <div class="table-responsive">
-                 <table class="table">
-                 <thead><tr><th>Sponsor</th><th>Amount</th></tr></thead>
-                 <tbody>
-                 ${donations.monthly_donations.map(d=>`<tr><td>${d.sponsor}</td><td>${d.amount}</td></tr>`).join('')}
-                 </tbody></table></div>`;
-
-      // Display Bank Info
-      tbl += `<h4>Bank Details</h4>
-              <ul>
-                <li>Bank: ${donations.bank_details.bank_name}</li>
-                <li>Account No: ${donations.bank_details.account_no}</li>
-                <li>IFSC: ${donations.bank_details.ifsc_code}</li>
-                <li>UPI: ${donations.bank_details.upi_id}</li>
-                <li>Account Holder: ${donations.bank_details.account_holder}</li>
-                <li>Email: ${donations.bank_details.email}</li>
-              </ul>`;
-
-      // Display Notes
-      tbl += `<h4>Notes</h4>
-              <ul>${donations.notes.map(n=>`<li>${n}</li>`).join('')}</ul>`;
-
-      document.getElementById('paymentsArea').innerHTML = tbl;
-
-    } catch(e){
-      document.getElementById('paymentsArea').innerHTML = '<div class="muted">No donation records found. Please add <code>payments.json</code> to the repo.</div>';
-    }
-  })();
-  </script>
-</body>
-</html>
+  <!-- Notes -->
+  <div class="card mb-4 shadow-sm">
+    <div class="card-header bg-warning text-dark">
+      <h5 class="mb-0">📝 Important Notes</h5>
+    </div>
+    <div class="card-body">
+      <ul class="list-group list-group-flush">
+        ${donations.notes.map(n=>`<li class="list-group-item">${n}</li>`).join('')}
+      </ul>
+    </div>
+  </div>
+</div>
