--- a/payments.html
+++ b/payments.html
@@ -1,3 +1,25 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Payments</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/style.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal : Payment Details</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="payments.html" class="active">Payments</a></div></div></nav>
+
+  <main class="container mt-4">
+    <div class="card p-3">
+      <h3>Payments</h3>
+      <div class="muted mb-2">This page shows monthly recurring contributions from sponsors.</div>
+      <div id="paymentsArea"></div>
+    </div>
+  </main>
+
+  <script src="assets/app.js"></script>
+  <script>
 <div id="paymentsArea" class="mt-3">
   <!-- Monthly Donations -->
   <div class="card mb-4 shadow-sm">
@@ -54,3 +76,6 @@
     </div>
   </div>
 </div>
+  </script>
+</body>
+</html>
