--- a/payments.html
+++ b/payments.html
@@ -1,81 +1,104 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Payments</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal : Payment Details</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html">Sponsors</a><a href="payments.html" class="active">Payments</a></div></div></nav>
+  <nav class="topnav">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a class="brand" href="index.html">Madrasa Payments</a>
+      <div class="nav-links">
+        <a href="students.html">Students</a>
+        <a href="sponsors.html">Sponsors</a>
+        <a href="payments.html" class="active">Payments</a>
+      </div>
+    </div>
+  </nav>
 
   <main class="container mt-4">
     <div class="card p-3">
       <h3>Payments</h3>
-      <div class="muted mb-2">This page shows monthly recurring contributions from sponsors.</div>
+      <div class="muted mb-3">This page shows monthly recurring contributions from sponsors.</div>
       <div id="paymentsArea"></div>
     </div>
   </main>
 
-  <script src="assets/app.js"></script>
-  <script>
-<div id="paymentsArea" class="mt-3">
-  <!-- Monthly Donations -->
-  <div class="card mb-4 shadow-sm">
-    <div class="card-header bg-primary text-white">
-      <h5 class="mb-0">💰 Monthly Donations</h5>
-    </div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-striped table-hover">
-          <thead class="table-light">
-            <tr>
-              <th>Sponsor</th>
-              <th>Amount (₹)</th>
-            </tr>
-          </thead>
-          <tbody>
-            ${donations.monthly_donations.map(d=>`
-            <tr>
-              <td>${d.sponsor}</td>
-              <td>${d.amount.toLocaleString()}</td>
-            </tr>`).join('')}
-          </tbody>
-        </table>
+<script src="assets/app.js"></script>
+<script>
+(async function(){
+  try {
+    const r = await fetch('donations.json');
+    if(!r.ok) throw new Error('donations.json not found');
+    const donations = await r.json();
+
+    // Build Monthly Donations Table
+    let html = `
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header bg-primary text-white">
+          <h5 class="mb-0">💰 Monthly Donations</h5>
+        </div>
+        <div class="card-body p-0">
+          <div class="table-responsive">
+            <table class="table table-striped table-hover table-sm mb-0">
+              <thead class="table-light">
+                <tr><th>Sponsor</th><th>Amount (₹)</th></tr>
+              </thead>
+              <tbody>
+                ${donations.monthly_donations.map(d=>`
+                  <tr><td>${d.sponsor}</td><td>${d.amount.toLocaleString()}</td></tr>
+                `).join('')}
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+    `;
 
-  <!-- Bank Details -->
-  <div class="card mb-4 shadow-sm">
-    <div class="card-header bg-success text-white">
-      <h5 class="mb-0">🏦 Bank Details</h5>
-    </div>
-    <div class="card-body">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"><strong>Bank:</strong> ${donations.bank_details.bank_name}</li>
-        <li class="list-group-item"><strong>Account No:</strong> ${donations.bank_details.account_no}</li>
-        <li class="list-group-item"><strong>IFSC:</strong> ${donations.bank_details.ifsc_code}</li>
-        <li class="list-group-item"><strong>UPI:</strong> ${donations.bank_details.upi_id}</li>
-        <li class="list-group-item"><strong>Account Holder:</strong> ${donations.bank_details.account_holder}</li>
-        <li class="list-group-item"><strong>Email:</strong> ${donations.bank_details.email}</li>
-      </ul>
-    </div>
-  </div>
+    // Bank Details
+    html += `
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header bg-success text-white">
+          <h5 class="mb-0">🏦 Bank Details</h5>
+        </div>
+        <div class="card-body">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item"><strong>Bank:</strong> ${donations.bank_details.bank_name}</li>
+            <li class="list-group-item"><strong>Account No:</strong> ${donations.bank_details.account_no}</li>
+            <li class="list-group-item"><strong>IFSC:</strong> ${donations.bank_details.ifsc_code}</li>
+            <li class="list-group-item"><strong>UPI:</strong> ${donations.bank_details.upi_id}</li>
+            <li class="list-group-item"><strong>Account Holder:</strong> ${donations.bank_details.account_holder}</li>
+            <li class="list-group-item"><strong>Email:</strong> ${donations.bank_details.email}</li>
+          </ul>
+        </div>
+      </div>
+    `;
 
-  <!-- Notes -->
-  <div class="card mb-4 shadow-sm">
-    <div class="card-header bg-warning text-dark">
-      <h5 class="mb-0">📝 Important Notes</h5>
-    </div>
-    <div class="card-body">
-      <ul class="list-group list-group-flush">
-        ${donations.notes.map(n=>`<li class="list-group-item">${n}</li>`).join('')}
-      </ul>
-    </div>
-  </div>
-</div>
-  </script>
+    // Notes
+    html += `
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header bg-warning text-dark">
+          <h5 class="mb-0">📝 Important Notes</h5>
+        </div>
+        <div class="card-body">
+          <ul class="list-group list-group-flush">
+            ${donations.notes.map(n=>`<li class="list-group-item">${n}</li>`).join('')}
+          </ul>
+        </div>
+      </div>
+    `;
+
+    document.getElementById('paymentsArea').innerHTML = html;
+
+  } catch(e) {
+    document.getElementById('paymentsArea').innerHTML = '<div class="muted">No donation records found. Please add <code>donations.json</code> to the repo.</div>';
+    console.error(e);
+  }
+})();
+</script>
 </body>
 </html>
