--- a/payments.html
+++ b/payments.html
@@ -32,8 +32,8 @@
 <script>
 (async function(){
   try {
-    const r = await fetch('donations.json');
-    if(!r.ok) throw new Error('donations.json not found');
+    const r = await fetch('payments.json');
+    if(!r.ok) throw new Error('payments.json not found');
     const donations = await r.json();
 
     // Build Monthly Donations Table
@@ -95,7 +95,7 @@
     document.getElementById('paymentsArea').innerHTML = html;
 
   } catch(e) {
-    document.getElementById('paymentsArea').innerHTML = '<div class="muted">No donation records found. Please add <code>donations.json</code> to the repo.</div>';
+    document.getElementById('paymentsArea').innerHTML = '<div class="muted">No donation records found. Please add <code>payments.json</code> to the repo.</div>';
     console.error(e);
   }
 })();
