--- a/payments.html
+++ b/payments.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="topnav">
     <div class="container d-flex justify-content-between align-items-center">
-      <a class="brand" href="index.html">Madrasa Payments</a>
+      <a class="brand" href="index.html">Madrasa Payments Details</a>
       <div class="nav-links">
         <a href="students.html">Students</a>
         <a href="sponsors.html">Sponsors</a>
