--- a/students.html
+++ b/students.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="topnav">
     <div class="container d-flex align-items-center justify-content-between">
-      <a class="brand" href="index.html">Madrasa — Hifz Progress</a>
+      <a class="brand" href="index.html">Madrasa Student Details</a>
       <div class="nav-links">
         <a href="students.html" class="active">Students</a>
         <a href="sponsors.html">Sponsors</a>
