--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="container d-flex align-items-center justify-content-between">
       <a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal : Hifz Progress</a>
       <div class="nav-links">
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
         <a href="students.html">Students</a>
         <a href="sponsors.html">Sponsors</a>
         <a href="payments.html">Payments</a>
