--- a/students.html
+++ b/students.html
@@ -13,6 +13,8 @@
     <div class="container d-flex align-items-center justify-content-between">
       <a class="brand" href="index.html">Madrasa Student Details</a>
       <div class="nav-links">
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
         <a href="students.html" class="active">Students</a>
         <a href="sponsors.html">Sponsors</a>
         <a href="payments.html">Payments</a>
