--- a/sponsors.html
+++ b/sponsors.html
@@ -8,7 +8,7 @@
   <link href="assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa Sponsor Details</a><div class="nav-links"><a href="students.html">Students</a><a href="sponsors.html" class="active">Sponsors</a><a href="payments.html">Payments</a></div></div></nav>
+  <nav class="topnav"><div class="container d-flex justify-content-between align-items-center"><a class="brand" href="index.html">Madrasa Sponsor Details</a><div class="nav-links"><a href="about.html">About</a><a href="contact.html">Contact</a><a href="students.html">Students</a><a href="sponsors.html" class="active">Sponsors</a><a href="payments.html">Payments</a></div></div></nav>
 
   <main class="container mt-4">
     <div class="card p-3">
