--- a/payments.html
+++ b/payments.html
@@ -13,6 +13,8 @@
     <div class="container d-flex justify-content-between align-items-center">
       <a class="brand" href="index.html">Madrasa Payments Details</a>
       <div class="nav-links">
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
         <a href="students.html">Students</a>
         <a href="sponsors.html">Sponsors</a>
         <a href="payments.html" class="active">Payments</a>
