--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,22 @@
   <link href="assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="topnav">
-    <div class="container d-flex justify-content-between align-items-center">
-      <a class="brand" href="index.html">Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal</a>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="students.html">Students</a>
-        <a href="sponsors.html">Sponsors</a>
-        <a href="payments.html">Payments</a>
-        <a href="about.html">About</a>
-        <a href="contact.html" class="active">Contact</a>
-      </div>
+<nav class="topnav">
+  <div class="container d-flex justify-content-between align-items-center">
+    <a class="brand d-flex align-items-center gap-2" href="index.html">
+      <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
+      <span>Madrasa Kifālat — Gadwal</span>
+    </a>
+    <div class="nav-links">
+      <a href="index.html" class="active">Home</a>
+      <a href="students.html">Students</a>
+      <a href="sponsors.html">Sponsors</a>
+      <a href="payments.html">Payments</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <main class="container mt-4">
     <div class="card p-4">
