--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <nav class="topnav">
     <div class="container d-flex justify-content-between align-items-center">
       <a class="brand d-flex align-items-center gap-2" href="index.html">
-        <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
-        <span>Madrasa Kifālat — Gadwal</span>
+        <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="8" height="8" alt="Home">
+        <span>📖 Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal</span>
       </a>
       <div class="nav-links">
         <a href="index.html" class="active">Home</a>
