--- a/index.html
+++ b/index.html
@@ -52,22 +52,19 @@
         </div>
       </div>
     </div>
-
-    <div class="card p-4 mb-4">
-      <h3>📈 Overall Student Progress</h3>
-      <canvas id="chartProgress" height="100"></canvas>
+        <div class="card p-4 mb-4">
+      <h3>🕋 Message</h3>
+      <p>Madrasa Kifālat is a humble initiative to empower education through compassion, collaboration and sincerity — purely to secure good deeds for Aakhirah.</p>
     </div>
-
+  </main>
     <div class="card p-4 mb-4">
       <h3>💚 Students per Sponsor</h3>
       <canvas id="chartSponsors" height="100"></canvas>
     </div>
-
     <div class="card p-4 mb-4">
-      <h3>🕋 Message</h3>
-      <p>Madrasa Kifālat is a humble initiative to empower education through compassion, collaboration, and sincerity — purely for the sake of Aakhirah.</p>
+      <h3>📈 Overall Student Progress</h3>
+      <canvas id="chartProgress" height="100"></canvas>
     </div>
-  </main>
 
   <script src="assets/app.js?v=2"></script>
   <script>
