--- a/students.html
+++ b/students.html
@@ -15,12 +15,12 @@
         <span>Madrasa Kifālat — Gadwal</span>
       </a>
       <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="students.html" class="active">Students</a>
-        <a href="sponsors.html">Sponsors</a>
-        <a href="payments.html">Payments</a>
-        <a href="contact.html">Contact</a>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="students.html">Students</a>
+  <a href="sponsors.html">Sponsors</a>
+  <a href="payments.html">Payments</a>
+  <a href="contact.html">Contact</a>
       </div>
     </div>
   </nav>
