--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
         <span>Madrasa Kifālat — Gadwal</span>
       </a>
-      <div class="nav-links">
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About</a>
-        <a href="students.html">Students</a>
-        <a href="sponsors.html">Sponsors</a>
-        <a href="payments.html">Payments</a>
-        <a href="contact.html">Contact</a>
-      </div>
+<div class="nav-links">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="students.html">Students</a>
+  <a href="sponsors.html">Sponsors</a>
+  <a href="payments.html">Payments</a>
+  <a href="contact.html">Contact</a>
+</div>
+
     </div>
   </nav>
 
