--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <a href="payments.html">Payments</a>
   <a href="contact.html">Contact</a>
 </div>
-
     </div>
   </nav>
 
@@ -67,6 +66,19 @@
       <h3>🕋 Message</h3>
       <p>Madrasa Kifālat is a humble initiative to empower education through compassion, collaboration, and sincerity — purely for the sake of Aakhirah.</p>
     </div>
+<!-- Madrasa Information -->
+<div class="card p-4 mb-4">
+  <h3>🏫 Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal</h3>
+  <p class="muted">A registered institution dedicated to Hifz and Islamic education, run under the guidance of respected Moulana Abubakr Hafizahullah.</p>
+  <ul>
+    <li><strong>📍 Address:</strong> Momin Mohalla, Jogulamba Gadwal, Telangana - 509125</li>
+    <li><strong>📞 Madrasa Office:</strong> 8008224816</li>
+    <li><strong>📱 Moulana Abubakr (Call / WhatsApp):</strong> +91 9985560630</li>
+  </ul>
+  <p class="mt-3 muted">
+    For sponsorships, student progress, or to visit in person, please reach out directly to the Madrasa Office.
+  </p>
+</div>
 
   </main>
 
