--- a/index.html
+++ b/index.html
@@ -66,17 +66,21 @@
       <h3>🕋 Message</h3>
       <p>Madrasa Kifālat is a humble initiative to empower education through compassion, collaboration, and sincerity — purely for the sake of Aakhirah.</p>
     </div>
-<!-- Madrasa Information -->
+<!-- Madrasa Information + Progress Shortcut -->
 <div class="card p-4 mb-4">
   <h3>🏫 Madrasa Islamia Arabia Baith-ul-Uloom — Gadwal</h3>
-  <p class="muted">A registered institution dedicated to Hifz and Islamic education, run under the guidance of respected Moulana Abubakr Hafizahullah.</p>
+  <p class="muted">A registered institution dedicated to Hifz and Islamic education, run under the guidance of Moulana Abubakr Hafizahullah.</p>
   <ul>
     <li><strong>📍 Address:</strong> Momin Mohalla, Jogulamba Gadwal, Telangana - 509125</li>
+    <li><strong>📞 Office:</strong> 8008224816</li>
+    <li><strong>📱 Moulana Abubakr (Call / WhatsApp):</strong> +91 9985560630</li>
   </ul>
-  <p class="mt-3 muted">
-    For sponsorships, student progress, or to visit in person, please reach out directly to the Madrasa Office.
-  </p>
+  <div class="mt-3 d-flex flex-wrap gap-2">
+    <a href="students.html" class="btn btn-primary">📈 View Progress Till Now →</a>
+    <a href="about.html" class="btn btn-outline-success">🌿 Visit About Page →</a>
+  </div>
 </div>
+
 
   </main>
 
