--- a/payments.html
+++ b/payments.html
@@ -117,5 +117,10 @@
   }
 })();
 </script>
+  <!-- Footer link -->
+<div class="text-center my-4">
+  <a href="about.html" class="btn btn-outline-success">🌿 Visit About Page →</a>
+</div>
+
 </body>
 </html>
