--- a/sponsors.html
+++ b/sponsors.html
@@ -47,5 +47,10 @@
       }).join('');
     })();
   </script>
+  <!-- Footer link -->
+<div class="text-center my-4">
+  <a href="about.html" class="btn btn-outline-success">🌿 Visit About Page →</a>
+</div>
+
 </body>
 </html>
