--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <div class="card p-4 mb-4">
       <h2>📊 Hifz Progress Dashboard</h2>
       <p class="muted">A visual overview of student progress.</p>
-
+<!-- 📈 Quick progress button -->
+<div class="mt-2 mb-3">
+<a href="students.html" class="btn btn-primary btn-lg">📈 View Progress Till Now →</a>
+</div>
       <div class="row g-4 mt-2">
         <div class="col-md-4 text-center">
           <div class="card p-3">
@@ -75,10 +78,6 @@
     <li><strong>📞 Office:</strong> 8008224816</li>
     <li><strong>📱 Moulana Abubakr (Call / WhatsApp):</strong> +91 9985560630</li>
   </ul>
-  <div class="mt-3 d-flex flex-wrap gap-2">
-    <a href="students.html" class="btn btn-primary">📈 View Progress Till Now →</a>
-    <a href="about.html" class="btn btn-outline-success">🌿 Visit About Page →</a>
-  </div>
 </div>
 
 
