--- a/about.html
+++ b/about.html
@@ -73,5 +73,6 @@
       <p>Our GitHub Pages site: <a href="https://madrasa-kifaalat.github.io/Hifz-Progress/" target="_blank">https://madrasa-kifaalat.github.io/Hifz-Progress/</a></p>
     </div>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
