--- a/contact.html
+++ b/contact.html
@@ -52,5 +52,6 @@
     </div>
 
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
