--- a/sponsors.html
+++ b/sponsors.html
@@ -58,6 +58,7 @@
       }).join('');
     })();
   </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
