--- a/students.html
+++ b/students.html
@@ -122,6 +122,7 @@
     render();
   })();
   </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
